@@ -1,3 +1,7 @@
+* Apr 4 2001 hship
+
+Add some simple method overrides to StatementAssembly to make it more useful.
+
 * Apr 3 2001 hship
 
 Add @since tags to new methods in AbtractEngine.
